fixed the layout problem when moving the kids page css file below the global css file in the html files. The kids page css is now below the global css line

--- a/kids-main-style.css
+++ b/kids-main-style.css
@@ -808,9 +808,9 @@ section ul.hs {
   .hs__item__title{
     font-size: 20px;
   }
-  section{
+  /*section{
     padding: 0 120px;
-  }
+  }*/
 }
 @media (hover: none) and (pointer: coarse) {
   .hs__wrapper .hs__arrows {
